# resume_build_work

./: .gitignore  README.md  pyproject.toml
prompt/: resume_advice.txt  resume_brushup_formatted.txt  resume_brushup_normal.txt  resume_make.txt
src/: app.py  prompts.py  resume_build_utils.py
