[tool.poetry]
name = "resume-build-work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "resume_build_work"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.40.1"
openai = "0.27.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
